mudei a cor de novo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     height: 100vh;
-    background: linear-gradient(120deg, #FFBE00, #D75413);
+    background: linear-gradient(120deg, #ffbb00, #c44100);
     display: flex;
     align-items: center;
     justify-content: center;
